@@ -1,3 +1,4 @@
+* Change range operator of search widget to be included
 * Explicitly set value of parent field
 
 Version 3.2.0 - 2014-04-21
